Fix actions button on firefox

--- a/app/assets/stylesheets/scss/_visualization.scss
+++ b/app/assets/stylesheets/scss/_visualization.scss
@@ -36,7 +36,8 @@ $node-color-12: #e0deda;
     margin-top: 2px;
 
     .icon-tool{
-      float: right;
+      display: inline-block;
+      vertical-align: top;
       margin-top: 4px;
       margin-left: 4px;
       @include retina-sprite( $icon-tool-group );
